--- a/cmc2/cmc2.csproj
+++ b/cmc2/cmc2.csproj
@@ -969,6 +969,7 @@
     <Content Include="Documents\submissionsPilot\2016.zip" />
     <Content Include="Documents\UserGuide.pdf" />
     <None Include="Properties\PublishProfiles\FolderProfile.pubxml" />
+    <Content Include="README.md" />
     <None Include="Scripts\jquery-3.1.1.intellisense.js" />
     <Content Include="Scripts\allJsLibraries.js" />
     <Content Include="Scripts\bootstrap.js" />
@@ -1000,7 +1001,6 @@
     <Content Include="Scripts\UserAdmin\editUser.js" />
     <Content Include="Scripts\_references.js" />
     <Content Include="ang\admin\views\groupsAdmin\list.html" />
-    <None Include="README.md" />
     <Content Include="Views\Web.config" />
     <Content Include="Views\_ViewStart.cshtml" />
     <Content Include="Views\Shared\Error.cshtml" />
